[gd_scene load_steps=35 format=3 uid="uid://bnl4sh1w8hpn5"]

[ext_resource type="Script" path="res://scenes/enemy/bakunawa/bakunawa.gd" id="1_2dgd2"]
[ext_resource type="Texture2D" uid="uid://bf4p3e0nhg5cr" path="res://assets/img/enemy/Bakunawa/bakunawa-Sheet.png" id="1_raad1"]
[ext_resource type="Texture2D" uid="uid://bgkvy3dcmwam" path="res://assets/img/enemy/Bakunawa/bakunawa_normal_atk.png" id="2_4o6rb"]
[ext_resource type="Script" path="res://components/flippable/flipabble_sprite2d.gd" id="2_265kp"]
[ext_resource type="PackedScene" uid="uid://km5ncswci6i0" path="res://components/flippable/flippable_shape_2d.tscn" id="3_2fu65"]
[ext_resource type="Texture2D" uid="uid://cbdxbaiagpngn" path="res://assets/img/enemy/Bakunawa/bakunawaatk-Sheet.png" id="3_kkjmw"]
[ext_resource type="PackedScene" uid="uid://cmwotsgmrkf85" path="res://scenes/state_machine/state_machine.tscn" id="5_5pk7e"]
[ext_resource type="Texture2D" uid="uid://bubuclovbmqn" path="res://assets/img/enemy/Bakunawa/bakunawa_chant.png" id="5_rhy13"]
[ext_resource type="Script" path="res://scenes/enemy/bakunawa/idle.gd" id="6_e5wdj"]
[ext_resource type="Script" path="res://scenes/enemy/bakunawa/attack.gd" id="7_5w4nc"]
[ext_resource type="Script" path="res://scenes/enemy/hit_box_component.gd" id="9_xyo5n"]
[ext_resource type="PackedScene" uid="uid://de6rqhh7nx1o5" path="res://components/hitbox/hit_box_component.tscn" id="10_cxe2o"]
[ext_resource type="Script" path="res://components/hitbox/hurt_box_component.gd" id="11_6cc7o"]
[ext_resource type="Script" path="res://scenes/enemy/bakunawa/heavy_cast.gd" id="11_wkmp3"]

[sub_resource type="Animation" id="Animation_ge15b"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_raad1")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpawnMagic:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-63, -20)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlippableSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bpgs2"]
resource_name = "new_animation"
length = 4.50001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_kkjmw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [36]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25, 2.375, 2.5, 2.625, 2.75, 2.875, 3, 3.125, 3.25, 3.375, 3.5, 3.625, 3.75, 3.875, 4, 4.125, 4.25, 4.375, 4.5, 4.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_kti66"]
resource_name = "casting"
length = 1.16668
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_rhy13")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_80rtm"]
resource_name = "idle"
length = 1.37501
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_raad1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 10]
}

[sub_resource type="Animation" id="Animation_urcjc"]
resource_name = "shoot"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.240839),
"transitions": PackedFloat32Array(1, 0.41765),
"update": 1,
"values": [ExtResource("3_kkjmw"), ExtResource("2_4o6rb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.240839),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.240839),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlippableSprite:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.240839, 0.324173, 0.407506),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(2, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpawnMagic:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.240839, 0.473808),
"transitions": PackedFloat32Array(1e-05, 1),
"update": 0,
"values": [Vector2(-58, 0), Vector2(-63, -20)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlippableSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_owy8q"]
_data = {
"RESET": SubResource("Animation_ge15b"),
"attack": SubResource("Animation_bpgs2"),
"casting": SubResource("Animation_kti66"),
"idle": SubResource("Animation_80rtm"),
"shoot": SubResource("Animation_urcjc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_to51h"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r6ybw"]
animation = &"casting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2erqo"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dxlti"]
animation = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bkapt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2uafn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s8cxj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_48etb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7vpwu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_birm4"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ie6mx"]
states/End/position = Vector2(908, 100)
states/attack/node = SubResource("AnimationNodeAnimation_to51h")
states/attack/position = Vector2(570, 176)
states/casting/node = SubResource("AnimationNodeAnimation_r6ybw")
states/casting/position = Vector2(321, 202)
states/idle/node = SubResource("AnimationNodeAnimation_2erqo")
states/idle/position = Vector2(439, 100)
states/shoot/node = SubResource("AnimationNodeAnimation_dxlti")
states/shoot/position = Vector2(490, 237)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_bkapt"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_2uafn"), "idle", "casting", SubResource("AnimationNodeStateMachineTransition_s8cxj"), "casting", "idle", SubResource("AnimationNodeStateMachineTransition_48etb"), "casting", "shoot", SubResource("AnimationNodeStateMachineTransition_7vpwu"), "shoot", "idle", SubResource("AnimationNodeStateMachineTransition_birm4")]
graph_offset = Vector2(-37, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r1k4p"]
size = Vector2(69, 140)

[sub_resource type="CircleShape2D" id="CircleShape2D_isl2f"]
radius = 103.812

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8sllx"]
size = Vector2(66.5, 144)

[node name="Bakunawa" type="CharacterBody2D"]
position = Vector2(-6, 0)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_2dgd2")

[node name="SpawnMagic" type="Marker2D" parent="."]
position = Vector2(-63, -20)
rotation = 3.14159

[node name="FlippableSprite" type="Sprite2D" parent="."]
position = Vector2(-34, 8)
texture = ExtResource("1_raad1")
hframes = 11
script = ExtResource("2_265kp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_owy8q")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ie6mx")
anim_player = NodePath("../AnimationPlayer")

[node name="FlippableShape2D" parent="." instance=ExtResource("3_2fu65")]
position = Vector2(10, 8)
shape = SubResource("RectangleShape2D_r1k4p")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("5_5pk7e")]
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_e5wdj")

[node name="Timer" type="Timer" parent="StateMachine/Idle"]
wait_time = 1.5
one_shot = true

[node name="CastingMagicball" type="Node" parent="StateMachine"]
script = ExtResource("7_5w4nc")

[node name="HeavyCast" type="Node" parent="StateMachine"]
script = ExtResource("11_wkmp3")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("9_xyo5n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-11, -7)
shape = SubResource("CircleShape2D_isl2f")

[node name="HurtBoxComponent" parent="." instance=ExtResource("10_cxe2o")]
visible = false
collision_layer = 4
collision_mask = 7
script = ExtResource("11_6cc7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(10, 8)
shape = SubResource("RectangleShape2D_8sllx")
debug_color = Color(0.926769, 3.83121e-05, 0.671138, 0.42)

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -91.0
offset_right = 27.0
offset_bottom = -68.0
text = "STATE"

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationTree" to="StateMachine/CastingMagicball" method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_area_entered"]
[connection signal="body_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_body_entered"]
